-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Minor - P4
-
Affects Version/s: 3.5.11
-
Component/s: Networking
-
None
-
Fully Compatible
-
ALL
-
-
Platforms 2017-09-11
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Box running macOS Sierra v10.12.2.
I can't reproduce this bug on my Fedora Linux box.
$ mongod --version
db version v3.5.11
git version: a8a9854b666515d48720cf2b203553954b6a75e6
OpenSSL version: OpenSSL 0.9.8zh 14 Jan 2016
allocator: system
modules: none
build environment:
distarch: x86_64
target_arch: x86_64
$ mongod --transportLayer asio --serviceExecutor adaptive
2017-08-14T09:31:57.066+0100 I CONTROL [initandlisten] MongoDB starting : pid=1335 port=27017 dbpath=/data/db 64-bit host=Josefs-MacBook-Pro.local
2017-08-14T09:31:57.067+0100 I CONTROL [initandlisten] db version v3.5.11
2017-08-14T09:31:57.067+0100 I CONTROL [initandlisten] git version: a8a9854b666515d48720cf2b203553954b6a75e6
2017-08-14T09:31:57.067+0100 I CONTROL [initandlisten] OpenSSL version: OpenSSL 0.9.8zh 14 Jan 2016
2017-08-14T09:31:57.067+0100 I CONTROL [initandlisten] allocator: system
2017-08-14T09:31:57.067+0100 I CONTROL [initandlisten] modules: none
2017-08-14T09:31:57.067+0100 I CONTROL [initandlisten] build environment:
2017-08-14T09:31:57.067+0100 I CONTROL [initandlisten] distarch: x86_64
2017-08-14T09:31:57.071+0100 I CONTROL [initandlisten] target_arch: x86_64
2017-08-14T09:31:57.071+0100 I CONTROL [initandlisten] options: { net: { serviceExecutor: "adaptive", transportLayer: "asio" } }
2017-08-14T09:31:57.071+0100 W - [initandlisten] Detected unclean shutdown - /data/db/mongod.lock is not empty.
2017-08-14T09:31:57.071+0100 I - [initandlisten] Detected data files in /data/db created by the 'wiredTiger' storage engine, so setting the active storage engine to 'wiredTiger'.
2017-08-14T09:31:57.071+0100 W STORAGE [initandlisten] Recovering data from the last clean checkpoint.
2017-08-14T09:31:57.071+0100 I STORAGE [initandlisten] wiredtiger_open config: create,cache_size=7680M,session_max=20000,eviction=(threads_min=4,threads_max=4),config_base=false,statistics=(fast),compatibility=(release="2.9"),log=(enabled=true,archive=true,path=journal,compressor=snappy),file_manager=(close_idle_time=100000),statistics_log=(wait=0),verbose=(recovery_progress),
2017-08-14T09:31:57.298+0100 I STORAGE [initandlisten] WiredTiger message [1502699517:298244][1335:0x7fffe43273c0], txn-recover: Main recovery loop: starting at 178/128
2017-08-14T09:31:57.298+0100 I STORAGE [initandlisten] WiredTiger message [1502699517:298523][1335:0x7fffe43273c0], txn-recover: Recovering log 178 through 179
2017-08-14T09:31:57.308+0100 I STORAGE [initandlisten] WiredTiger message [1502699517:308598][1335:0x7fffe43273c0], file:index-1--2375679451342936154.wt, txn-recover: Recovering log 179 through 179
2017-08-14T09:31:57.607+0100 I STORAGE [initandlisten] Starting WiredTigerRecordStoreThread local.oplog.rs
2017-08-14T09:31:57.607+0100 I STORAGE [initandlisten] The size storer reports that the oplog contains 784 records totaling to 75576 bytes
2017-08-14T09:31:57.607+0100 I STORAGE [initandlisten] Scanning the oplog to determine where to place markers for truncation
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten]
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** NOTE: This is a development version (3.5.11) of MongoDB.
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** Not recommended for production.
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten]
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** WARNING: Access control is not enabled for the database.
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** Read and write access to data and configuration is unrestricted.
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten]
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** WARNING: This server is bound to localhost.
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** Remote systems will be unable to connect to this server.
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** Start the server with --bind_ip <address> to specify which IP
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** addresses it should serve responses from, or with --bind_ip_all to
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** bind to all interfaces. If this behavior is desired, start the
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten] ** server with --bind_ip 127.0.0.1 to disable this warning.
2017-08-14T09:31:57.679+0100 I CONTROL [initandlisten]
2017-08-14T09:31:57.704+0100 W SHARDING [initandlisten] Not started with --shardsvr, but a shardIdentity document was found on disk in admin.system.version: { _id: "shardIdentity", clusterId: ObjectId('595a45287650cb6759b4e813'), shardName: "josef", configsvrConnectionString: "josef/Josefs-MacBook-Pro.local:27019" }
2017-08-14T09:31:57.704+0100 I FTDC [initandlisten] Initializing full-time diagnostic data capture with directory '/data/db/diagnostic.data'
2017-08-14T09:31:57.705+0100 I STORAGE [initandlisten]
2017-08-14T09:31:57.705+0100 I STORAGE [initandlisten] ** WARNING: mongod started without --replSet yet 1 documents are present in local.system.replset
2017-08-14T09:31:57.705+0100 I STORAGE [initandlisten] ** Restart with --replSet unless you are doing maintenance and no other clients are connected.
2017-08-14T09:31:57.705+0100 I STORAGE [initandlisten] ** The TTL collection monitor will not start because of this.
2017-08-14T09:31:57.705+0100 I STORAGE [initandlisten] **
2017-08-14T09:31:57.705+0100 I STORAGE [initandlisten] For more info see http://dochub.mongodb.org/core/ttlcollections
2017-08-14T09:31:57.705+0100 I STORAGE [initandlisten]
2017-08-14T09:31:57.706+0100 I NETWORK [initandlisten] waiting for connections on port 27017
2017-08-14T09:31:57.706+0100 I EXECUTOR [initandlisten] No thread count configured for executor. Using number of cores / 2: 2
2017-08-14T09:31:57.706+0100 I EXECUTOR [worker-1] Starting new database worker thread 1
2017-08-14T09:31:57.706+0100 I EXECUTOR [worker-2] Starting new database worker thread 2
2017-08-14T09:31:58.005+0100 F - [ftdc] Invariant failure tickSource->getTicksPerSecond() > 1000000 src/mongo/transport/service_executor_adaptive.cpp 90
2017-08-14T09:31:58.005+0100 F - [ftdc]
***aborting after invariant() failure
2017-08-14T09:31:58.015+0100 F - [ftdc] Got signal: 6 (Abort trap: 6).
0x102eb4af9 0x102eb431d 0x7fffdb6e7bba 0x7fffe43086b0 0x7fffdb56e420 0x102eaa0ce 0x101e7836b 0x101e78131 0x101e7537c 0x101a24bf8 0x101e742eb 0x102a788ce 0x102a76a7e 0x101cc922c 0x101ccbcb3 0x101ccdda1 0x101cce581 0x7fffdb6f1aab 0x7fffdb6f19f7 0x7fffdb6f11fd
----- BEGIN BACKTRACE -----
{"backtrace":[{"b":"1019FA000","o":"14BAAF9","s":"_ZN5mongo15printStackTraceERNSt3__113basic_ostreamIcNS0_11char_traitsIcEEEE"},{"b":"1019FA000","o":"14BA31D","s":"_ZN5mongo12_GLOBAL__N_110abruptQuitEi"},{"b":"7FFFDB6E5000","o":"2BBA","s":"_sigtramp"},{"b":"7FFFDB50F000","o":"8DF96B0","s":"_C_time_locale"},{"b":"7FFFDB50F000","o":"5F420","s":"abort"},{"b":"1019FA000","o":"14B00CE","s":"_ZN5mongo15invariantFailedEPKcS1_j"},{"b":"1019FA000","o":"47E36B","s":"_ZN5mongo9transport12_GLOBAL__N_113ticksToMicrosExPNS_10TickSourceE"},{"b":"1019FA000","o":"47E131","s":"_ZNK5mongo9transport23ServiceExecutorAdaptive11appendStatsEPNS_14BSONObjBuilderE"},{"b":"1019FA000","o":"47B37C","s":"_ZNK5mongo12_GLOBAL__N_17Network15generateSectionEPNS_16OperationContextERKNS_11BSONElementE"},{"b":"1019FA000","o":"2ABF8","s":"_ZNK5mongo19ServerStatusSection13appendSectionEPNS_16OperationContextERKNS_11BSONElementEPNS_14BSONObjBuilderE"},{"b":"1019FA000","o":"47A2EB","s":"_ZN5mongo15CmdServerStatus3runEPNS_16OperationContextERKNSt3__112basic_stringIcNS3_11char_traitsIcEENS3_9allocatorIcEEEERKNS_7BSONObjERNS_14BSONObjBuilderE"},{"b":"1019FA000","o":"107E8CE","s":"_ZN5mongo12BasicCommand11enhancedRunEPNS_16OperationContextERKNS_12OpMsgRequestERNS_14BSONObjBuilderE"},{"b":"1019FA000","o":"107CA7E","s":"_ZN5mongo7Command18runCommandDirectlyEPNS_16OperationContextERKNS_12OpMsgRequestE"},{"b":"1019FA000","o":"2CF22C","s":"_ZN5mongo34FTDCSimpleInternalCommandCollector7collectEPNS_16OperationContextERNS_14BSONObjBuilderE"},{"b":"1019FA000","o":"2D1CB3","s":"_ZN5mongo23FTDCCollectorCollection7collectEPNS_6ClientE"},{"b":"1019FA000","o":"2D3DA1","s":"_ZN5mongo14FTDCController6doLoopEv"},{"b":"1019FA000","o":"2D4581","s":"_ZNSt3__114__thread_proxyINS_5tupleIJNS_6__bindIMN5mongo14FTDCControllerEFvvEJPS4_EEEEEEEEPvSA_"},{"b":"7FFFDB6EE000","o":"3AAB","s":"_pthread_body"},{"b":"7FFFDB6EE000","o":"39F7","s":"_pthread_body"},{"b":"7FFFDB6EE000","o":"31FD","s":"thread_start"}],"processInfo":{ "mongodbVersion" : "3.5.11", "gitVersion" : "a8a9854b666515d48720cf2b203553954b6a75e6", "compiledModules" : [], "uname" : { "sysname" : "Darwin", "release" : "16.3.0", "version" : "Darwin Kernel Version 16.3.0: Thu Nov 17 20:23:58 PST 2016; root:xnu-3789.31.2~1/RELEASE_X86_64", "machine" : "x86_64" }, "somap" : [ { "path" : "/usr/local/bin/mongod", "machType" : 2, "b" : "1019FA000", "vmaddr" : "100000000", "buildId" : "9ED752830B983311BA4C212D8E0F40AA" }, { "path" : "/usr/lib/libssl.0.9.8.dylib", "machType" : 6, "b" : "7FFFDB1DF000", "vmaddr" : "7FFF8A60E000", "buildId" : "6E690FB1A581302793B3060D9D497A27" }, { "path" : "/usr/lib/libcrypto.0.9.8.dylib", "machType" : 6, "b" : "7FFFDA1D6000", "vmaddr" : "7FFF89605000", "buildId" : "D41E190106DD3860BB4FB3ACE0284C01" }, { "path" : "/usr/lib/libSystem.B.dylib", "machType" : 6, "b" : "7FFFD9F37000", "vmaddr" : "7FFF89366000", "buildId" : "FF55E33537C335679415A3A1473775F5" }, { "path" : "/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation", "machType" : 6, "b" : "7FFFC5EFA000", "vmaddr" : "7FFF75329000", "buildId" : "A40AA2247A50398995D05A228A0E2FAF" }, { "path" : "/System/Library/Frameworks/Security.framework/Versions/A/Security", "machType" : 6, "b" : "7FFFCC400000", "vmaddr" : "7FFF7B82F000", "buildId" : "A47D7BAE059131848E44FB2EB08A19C2" }, { "path" : "/usr/lib/libc++.1.dylib", "machType" : 6, "b" : "7FFFDA071000", "vmaddr" : "7FFF894A0000", "buildId" : "BEE86868F831384C919E2B286ACFE87C" }, { "path" : "/System/Library/PrivateFrameworks/TrustEvaluationAgent.framework/Versions/A/TrustEvaluationAgent", "machType" : 6, "b" : "7FFFD8A36000", "vmaddr" : "7FFF87E65000", "buildId" : "07C1F711A1E03BAC8F4D977516D50925" }, { "path" : "/usr/lib/libz.1.dylib", "machType" : 6, "b" : "7FFFDB3DC000", "vmaddr" : "7FFF8A80B000", "buildId" : "46E3FFA24328327A8D34A03E20BFFB8E" }, { "path" : "/usr/lib/system/libcache.dylib", "machType" : 6, "b" : "7FFFDB3FC000", "vmaddr" : "7FFF8A82B000", "buildId" : "0C8092D3600F3ADDA036F225B6CDCA43" }, { "path" : "/usr/lib/system/libcommonCrypto.dylib", "machType" : 6, "b" : "7FFFDB401000", "vmaddr" : "7FFF8A830000", "buildId" : "B16E29B6EC8D3A8F9A89DD9CF35F7C4B" }, { "path" : "/usr/lib/system/libcompiler_rt.dylib", "machType" : 6, "b" : "7FFFDB40D000", "vmaddr" : "7FFF8A83C000", "buildId" : "E992E8D9037C3454A366A25E4D31D6BB" }, { "path" : "/usr/lib/system/libcopyfile.dylib", "machType" : 6, "b" : "7FFFDB415000", "vmaddr" : "7FFF8A844000", "buildId" : "64E285D95485333BAEE78B0C8FB9275F" }, { "path" : "/usr/lib/system/libcorecrypto.dylib", "machType" : 6, "b" : "7FFFDB41E000", "vmaddr" : "7FFF8A84D000", "buildId" : "2074B932FD7930A98E90AF25C49F2AF1" }, { "path" : "/usr/lib/system/libdispatch.dylib", "machType" : 6, "b" : "7FFFDB4A2000", "vmaddr" : "7FFF8A8D1000", "buildId" : "EA0CC14ED5593802B4B20E8C7579AAC4" }, { "path" : "/usr/lib/system/libdyld.dylib", "machType" : 6, "b" : "7FFFDB4D5000", "vmaddr" : "7FFF8A904000", "buildId" : "E5A2414F24803BB2BE94176119A80876" }, { "path" : "/usr/lib/system/libkeymgr.dylib", "machType" : 6, "b" : "7FFFDB4DB000", "vmaddr" : "7FFF8A90A000", "buildId" : "1A31892312003B06B4325007D82F195D" }, { "path" : "/usr/lib/system/liblaunch.dylib", "machType" : 6, "b" : "7FFFDB4E9000", "vmaddr" : "7FFF8A918000", "buildId" : "15FACC21079A3BDF9AFB4253EFDEB587" }, { "path" : "/usr/lib/system/libmacho.dylib", "machType" : 6, "b" : "7FFFDB4EA000", "vmaddr" : "7FFF8A919000", "buildId" : "A2F38EC1C37C3B93B0E436B07C177F8C" }, { "path" : "/usr/lib/system/libquarantine.dylib", "machType" : 6, "b" : "7FFFDB4F0000", "vmaddr" : "7FFF8A91F000", "buildId" : "C1D7749F5F5F3BB9BEFC1F0B9DA941FD" }, { "path" : "/usr/lib/system/libremovefile.dylib", "machType" : 6, "b" : "7FFFDB4F3000", "vmaddr" : "7FFF8A922000", "buildId" : "CD42974EBE0B39FC9BFC8A7540A04DC6" }, { "path" : "/usr/lib/system/libsystem_asl.dylib", "machType" : 6, "b" : "7FFFDB4F5000", "vmaddr" : "7FFF8A924000", "buildId" : "EFAC72D7CB133DF7ADF3EC6635C6F1EA" }, { "path" : "/usr/lib/system/libsystem_blocks.dylib", "machType" : 6, "b" : "7FFFDB50E000", "vmaddr" : "7FFF8A93D000", "buildId" : "B8C3701D5A913D35999D2DC8D5393525" }, { "path" : "/usr/lib/system/libsystem_c.dylib", "machType" : 6, "b" : "7FFFDB50F000", "vmaddr" : "7FFF8A93E000", "buildId" : "2F88196203CB3B9DA782D98C1BBA4E3D" }, { "path" : "/usr/lib/system/libsystem_configuration.dylib", "machType" : 6, "b" : "7FFFDB59D000", "vmaddr" : "7FFF8A9CC000", "buildId" : "4FE3983CE4ED3939A57803AD29C99788" }, { "path" : "/usr/lib/system/libsystem_coreservices.dylib", "machType" : 6, "b" : "7FFFDB5A1000", "vmaddr" : "7FFF8A9D0000", "buildId" : "1A572B9E0C47320F8C647990D0A5FB5A" }, { "path" : "/usr/lib/system/libsystem_coretls.dylib", "machType" : 6, "b" : "7FFFDB5A5000", "vmaddr" : "7FFF8A9D4000", "buildId" : "4676F06D274D31BEB61C4D7A4AEF4858" }, { "path" : "/usr/lib/system/libsystem_dnssd.dylib", "machType" : 6, "b" : "7FFFDB5BE000", "vmaddr" : "7FFF8A9ED000", "buildId" : "DC708D84ED7D3936B996A67C66B8DDAA" }, { "path" : "/usr/lib/system/libsystem_info.dylib", "machType" : 6, "b" : "7FFFDB5C5000", "vmaddr" : "7FFF8A9F4000", "buildId" : "9ED9121CF1113FADBC2FC95DEE1C9362" }, { "path" : "/usr/lib/system/libsystem_kernel.dylib", "machType" : 6, "b" : "7FFFDB5EF000", "vmaddr" : "7FFF8AA1E000", "buildId" : "FCEEBBD4DF6634D8A32F4F8C8E814E40" }, { "path" : "/usr/lib/system/libsystem_m.dylib", "machType" : 6, "b" : "7FFFDB612000", "vmaddr" : "7FFF8AA41000", "buildId" : "266DB92BA86F369180FB1B26AD73CFF3" }, { "path" : "/usr/lib/system/libsystem_malloc.dylib", "machType" : 6, "b" : "7FFFDB65A000", "vmaddr" : "7FFF8AA89000", "buildId" : "F40DEE3B386A3529A3F798117ED55BF4" }, { "path" : "/usr/lib/system/libsystem_network.dylib", "machType" : 6, "b" : "7FFFDB679000", "vmaddr" : "7FFF8AAA8000", "buildId" : "4AE368E9605D379DB04C2AC7455B8250" }, { "path" : "/usr/lib/system/libsystem_networkextension.dylib", "machType" : 6, "b" : "7FFFDB6D1000", "vmaddr" : "7FFF8AB00000", "buildId" : "EB020B0C7DF03EEF8E3C15DA3C01D687" }, { "path" : "/usr/lib/system/libsystem_notify.dylib", "machType" : 6, "b" : "7FFFDB6DB000", "vmaddr" : "7FFF8AB0A000", "buildId" : "E7FD3A7CDD0736E29FA47561F9F114DA" }, { "path" : "/usr/lib/system/libsystem_platform.dylib", "machType" : 6, "b" : "7FFFDB6E5000", "vmaddr" : "7FFF8AB14000", "buildId" : "3CA06D4EC00A36DEAA653A390097D1F6" }, { "path" : "/usr/lib/system/libsystem_pthread.dylib", "machType" : 6, "b" : "7FFFDB6EE000", "vmaddr" : "7FFF8AB1D000", "buildId" : "C869ED7CBE2935328E693A8DA1447EDC" }, { "path" : "/usr/lib/system/libsystem_sandbox.dylib", "machType" : 6, "b" : "7FFFDB6F9000", "vmaddr" : "7FFF8AB28000", "buildId" : "7BBFDF96293F3DD9B3A47C168280B441" }, { "path" : "/usr/lib/system/libsystem_secinit.dylib", "machType" : 6, "b" : "7FFFDB6FD000", "vmaddr" : "7FFF8AB2C000", "buildId" : "5C1F1E470F7D3E258DEBD9DB1F902281" }, { "path" : "/usr/lib/system/libsystem_symptoms.dylib", "machType" : 6, "b" : "7FFFDB6FF000", "vmaddr" : "7FFF8AB2E000", "buildId" : "5D990CF5B58F39F7B37599B4EC62CFBD" }, { "path" : "/usr/lib/system/libsystem_trace.dylib", "machType" : 6, "b" : "7FFFDB707000", "vmaddr" : "7FFF8AB36000", "buildId" : "5BD4ECD475CA38EAAF5CB481C15955F8" }, { "path" : "/usr/lib/system/libunwind.dylib", "machType" : 6, "b" : "7FFFDB728000", "vmaddr" : "7FFF8AB57000", "buildId" : "9F7C2AD8A9A73DE4828DB0F0F166AAA0" }, { "path" : "/usr/lib/system/libxpc.dylib", "machType" : 6, "b" : "7FFFDB72E000", "vmaddr" : "7FFF8AB5D000", "buildId" : "65E41BB6EBD53D93B0BEB190CEE4DD93" }, { "path" : "/usr/lib/libobjc.A.dylib", "machType" : 6, "b" : "7FFFDABE2000", "vmaddr" : "7FFF8A011000", "buildId" : "F9AFE665A3A23285949519803A565861" }, { "path" : "/usr/lib/libauto.dylib", "machType" : 6, "b" : "7FFFDA050000", "vmaddr" : "7FFF8947F000", "buildId" : "5BBF6A00CC76389D84E7CA88EDADE683" }, { "path" : "/usr/lib/libc++abi.dylib", "machType" : 6, "b" : "7FFFDA0C8000", "vmaddr" : "7FFF894F7000", "buildId" : "1CEF8ABB7E6D3C2F8E0AE7884478DD23" }, { "path" : "/usr/lib/libDiagnosticMessagesClient.dylib", "machType" : 6, "b" : "7FFFD9CF8000", "vmaddr" : "7FFF89127000", "buildId" : "422911A4E2733E88BFC4DF6470E48242" }, { "path" : "/usr/lib/libicucore.A.dylib", "machType" : 6, "b" : "7FFFDA630000", "vmaddr" : "7FFF89A5F000", "buildId" : "6B5FDA93AA88318F9608C2A33D602EC7" }, { "path" : "/usr/lib/libcoretls.dylib", "machType" : 6, "b" : "7FFFDA11A000", "vmaddr" : "7FFF89549000", "buildId" : "BCC3253748313E9F876E8C9F4CF52FD3" }, { "path" : "/usr/lib/libcoretls_cfhelpers.dylib", "machType" : 6, "b" : "7FFFDA11B000", "vmaddr" : "7FFF8954A000", "buildId" : "6F37C5AD79993D31A52F7AEED935F32D" }, { "path" : "/usr/lib/libbsm.0.dylib", "machType" : 6, "b" : "7FFFDA051000", "vmaddr" : "7FFF89480000", "buildId" : "20084796B04D3B35A003EA11459557A9" }, { "path" : "/usr/lib/libxar.1.dylib", "machType" : 6, "b" : "7FFFDB2B1000", "vmaddr" : "7FFF8A6E0000", "buildId" : "58BFB84B66FE3299AA3DBBA178ADEE39" }, { "path" : "/usr/lib/libsqlite3.dylib", "machType" : 6, "b" : "7FFFDB074000", "vmaddr" : "7FFF8A4A3000", "buildId" : "B5BA5C96AB1334A08237DD52A0181DFE" }, { "path" : "/usr/lib/libpam.2.dylib", "machType" : 6, "b" : "7FFFDAFB5000", "vmaddr" : "7FFF8A3E4000", "buildId" : "71EB0D88DE843C8DA2C558AA282BC5BC" }, { "path" : "/System/Library/Frameworks/IOKit.framework/Versions/A/IOKit", "machType" : 6, "b" : "7FFFC7EDC000", "vmaddr" : "7FFF7730B000", "buildId" : "163BE7FAB29A348F8B5FE301F2E8C964" }, { "path" : "/usr/lib/libOpenScriptingUtil.dylib", "machType" : 6, "b" : "7FFFD9F31000", "vmaddr" : "7FFF89360000", "buildId" : "D025E180BB3B3FFA98FCB6835354D723" }, { "path" : "/usr/lib/libbz2.1.0.dylib", "machType" : 6, "b" : "7FFFDA062000", "vmaddr" : "7FFF89491000", "buildId" : "6FD3B63F0F863A25BD5BE243F58792C9" }, { "path" : "/usr/lib/libxml2.2.dylib", "machType" : 6, "b" : "7FFFDB2C2000", "vmaddr" : "7FFF8A6F1000", "buildId" : "E12AF9290FA53214840FC81E6AC9F36E" }, { "path" : "/usr/lib/liblzma.5.dylib", "machType" : 6, "b" : "7FFFDA85D000", "vmaddr" : "7FFF89C8C000", "buildId" : "44BD027999DD36B58A6EC11432E2098D" }, { "path" : "/usr/lib/libenergytrace.dylib", "machType" : 6, "b" : "7FFFDA527000", "vmaddr" : "7FFF89956000", "buildId" : "A1B040A2797730979ADF34FF181EB970" }, { "path" : "/usr/lib/system/libkxld.dylib", "machType" : 6, "b" : "7FFFDB4DC000", "vmaddr" : "7FFF8A90B000", "buildId" : "524D7C3D73EB3F62ADB19DFBACB95924" } ] }}
mongod(_ZN5mongo15printStackTraceERNSt3__113basic_ostreamIcNS0_11char_traitsIcEEEE+0x39) [0x102eb4af9]
mongod(_ZN5mongo12_GLOBAL__N_110abruptQuitEi+0xBD) [0x102eb431d]
libsystem_platform.dylib(_sigtramp+0x1A) [0x7fffdb6e7bba]
libsystem_c.dylib(_C_time_locale+0x0) [0x7fffe43086b0]
libsystem_c.dylib(abort+0x81) [0x7fffdb56e420]
mongod(_ZN5mongo15invariantFailedEPKcS1_j+0x2EE) [0x102eaa0ce]
mongod(_ZN5mongo9transport12_GLOBAL__N_113ticksToMicrosExPNS_10TickSourceE+0x9B) [0x101e7836b]
mongod(_ZNK5mongo9transport23ServiceExecutorAdaptive11appendStatsEPNS_14BSONObjBuilderE+0x1C1) [0x101e78131]
mongod(_ZNK5mongo12_GLOBAL__N_17Network15generateSectionEPNS_16OperationContextERKNS_11BSONElementE+0x6C) [0x101e7537c]
mongod(_ZNK5mongo19ServerStatusSection13appendSectionEPNS_16OperationContextERKNS_11BSONElementEPNS_14BSONObjBuilderE+0x38) [0x101a24bf8]
mongod(_ZN5mongo15CmdServerStatus3runEPNS_16OperationContextERKNSt3__112basic_stringIcNS3_11char_traitsIcEENS3_9allocatorIcEEEERKNS_7BSONObjERNS_14BSONObjBuilderE+0x3AB) [0x101e742eb]
mongod(_ZN5mongo12BasicCommand11enhancedRunEPNS_16OperationContextERKNS_12OpMsgRequestERNS_14BSONObjBuilderE+0x9E) [0x102a788ce]
mongod(_ZN5mongo7Command18runCommandDirectlyEPNS_16OperationContextERKNS_12OpMsgRequestE+0xFE) [0x102a76a7e]
mongod(_ZN5mongo34FTDCSimpleInternalCommandCollector7collectEPNS_16OperationContextERNS_14BSONObjBuilderE+0x2C) [0x101cc922c]
mongod(_ZN5mongo23FTDCCollectorCollection7collectEPNS_6ClientE+0x1A3) [0x101ccbcb3]
mongod(_ZN5mongo14FTDCController6doLoopEv+0x241) [0x101ccdda1]
mongod(_ZNSt3__114__thread_proxyINS_5tupleIJNS_6__bindIMN5mongo14FTDCControllerEFvvEJPS4_EEEEEEEEPvSA_+0x71) [0x101cce581]
libsystem_pthread.dylib(_pthread_body+0xB4) [0x7fffdb6f1aab]
libsystem_pthread.dylib(_pthread_body+0x0) [0x7fffdb6f19f7]
libsystem_pthread.dylib(thread_start+0xD) [0x7fffdb6f11fd]
----- END BACKTRACE -----
Abort trap: 6