SERVER-30637 Fix adaptive executor with microsecond tick resolution